force-app/main/default/objects/Contact/fields/birthdayCobra__c.field-meta.xml
<CustomField>
    <fullName>birthdayCobra__c</fullName>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>