force-app/main/default/objects/Contact/fields/cobraCustomerId__c.field-meta.xml
<CustomField>
    <fullName>cobraCustomerId__c</fullName>
    <description>This is the customer id used in cobra for just some customers.</description>
    <label>Cobra Customer Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>