force-app/main/default/objects/Contact/fields/countryCodeContact__c.field-meta.xml
<CustomField>
    <fullName>countryCodeContact__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>