force-app/main/default/objects/Contact/fields/Last_Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Last_Rental_Agreement__c</fullName>
    <description>The customers last rental agreement. This field is also used for external lookup and at the same time being unique ID from Cobra.</description>
    <externalId>true</externalId>
    <label>Last Rental Agreement</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>