force-app/main/default/objects/Contact/fields/launguageCode__c.field-meta.xml
<CustomField>
    <fullName>launguageCode__c</fullName>
    <description>this code describe which laungage the contact speak.</description>
    <label>Laungage Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>