force-app/main/default/objects/Contact/fields/rapidCardId__c.field-meta.xml
<CustomField>
    <fullName>rapidCardId__c</fullName>
    <description>This is the Sixt Rapid Card id there are used in Cobra</description>
    <label>Rapid Card Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>