force-app/main/default/objects/Contact/recordTypes/Pickup_Location.recordType-meta.xml
<RecordType>
    <fullName>Pickup_Location</fullName>
    <active>true</active>
    <description>Vehicle Pickup Location from Dealer or Station</description>
    <label>Pickup Location</label>
</RecordType>